Added events to navbar

--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -41,6 +41,7 @@
                         <section class="settings_menu" id="settingsMenu">  <!-- thiis the settings icon that lets you go to other pages -->
                             <a href="{% url 'home' %}">Home</a> <!-- this is so you can go back to the home page from other pages -->
                             <a href="{% url 'tasks' %}">Tasks</a> <!-- this is to go to the tasks page where you can create tasks -->
+                            <a href="{% url 'events' %}">Events</a> <!-- this is to go to the events page where you can join events -->
                             <a href="{% url 'settings' %}">Settings</a> <!-- this is to go to the settings page to edit or view settings -->
                         </section> 
                     </section>
