--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -9,6 +9,28 @@
         crossorigin=""/>
     
     <style>
+        .heading{
+            align-items: center;
+        }
+
+        .event_list_container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 0.8em;
+            margin: 5px;
+            opacity: 0.9;
+        }
+
+        .event {
+            margin: 5px;
+            padding: 15px;
+        }
+
+        .event_details_container {
+            display: flex;
+            justify-content: center;
+            position: fixed;
+        }
 
         .event_details {
             display: none;
@@ -28,29 +50,14 @@
             display: none; /* Hides the scrollbar */
         }
 
-        .event_details .show{
-            display: block;
-        }
-
-        .heading{
-            align-items: center;
-        }
-
-
-        .event {
-            margin: 5px;
-            padding: 15px;
-            
+        .exit_button_container {
+            display: flex;
+            justify-content: end;
         }
 
         .exit_button {
             margin-top: 10px;
             display: inline-block;
-        }
-
-        .exit_button_container {
-            display: flex;
-            justify-content: end;
         }
 
         .join_button{
@@ -88,26 +95,11 @@
             height: 200px; 
         }
 
-        .meow {
-            display: flex;
-            justify-content: center;
-            position: fixed;
-        }
-
-        .event_list_container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 0.8em;
-            margin: 5px;
-            opacity: 0.9;
-        }
-
         .points{
             display: flex;
             justify-content: flex-start;
             font-weight: bold;
         }
-
     </style>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -172,7 +164,8 @@
         </div>
         
 
-        <div class="meow">
+        <!-- Events popup, showing a specific event -->
+        <div class="event_details_container">
             <div class="event_details margin_std box_shadow" id="event_details">
                 <div class="flex_h heading">
                     <h1 id="name", class="text_dark"></h1>
@@ -180,7 +173,6 @@
                 </div>
 
                 <div class="event_details_content" >
-
                     <div class="datetime">
                         <p id="time"></p>
                         <p id="date"></p>
@@ -200,7 +192,6 @@
                     <h4>About Event:</h4>
                     <p id="description"></p>
                 </div>
-                
     
                 <div class="flex_center button_container">
                     <button class="button text_light join_button" id="button"></button>
@@ -215,6 +206,7 @@
     <script>
         let map = null;
 
+        //creates the map which is displayed within the event popup
         function createMap(lat, lon, zoom = 13) {
             map = L.map('map').setView([lat, lon], zoom);
 
@@ -225,6 +217,7 @@
             L.marker([lat, lon]).addTo(map);
         }
 
+        //opens an event's details popup
         function openEventDetails(element, eventType) {
             let eventDetails = document.getElementById("event_details");
             eventDetails.setAttribute("event-id", element.dataset.id);
@@ -247,6 +240,7 @@
             let tasksContainer = eventDetails.querySelector("#tasks");
             tasksContainer.innerHTML = ""; 
 
+            //gets all the tasks within a specific event
             getEventTask(element.dataset.id)
                 .then(data => {
                     if (data.tasks.length === 0) {
@@ -261,11 +255,13 @@
                     }
                 });
 
+            //map coodinates hardcoded for now
             createMap(50.734967, -3.533750);
 
             eventDetails.style.display = "block";
         }
 
+        //closes the event detail pop up
         function closeEventDetails() {
             document.getElementById("event_details").style.display = "none";
 
@@ -275,7 +271,7 @@
             }
         }
 
-
+        //updates the database that the user wants to join an event
         function joinEvent() {
             let eventId = document.getElementById("button").getAttribute("event-id");
 
@@ -291,6 +287,7 @@
             .catch(error => console.error("Error:", error));
         }
 
+        //updates the database that the user no longer wanted to be part of an event
         function leaveEvent() {
             let eventId = document.getElementById("button").getAttribute("event-id");
 
@@ -307,7 +304,7 @@
         }
 
  
-
+        //updates the database when an event is completed
         function completeEvent() {
             let eventId = document.getElementById("button").getAttribute("event-id");
 
@@ -323,21 +320,7 @@
             .catch(error => console.error("Error:", error));
         }
 
-        function changeEventInfo(url) {
-            let eventId = document.getElementById("button").getAttribute("event-id");
-
-            fetch("url", {
-                method: "POST",
-                headers:{"X-CSRFToken": getCSRFToken() },
-                body: new URLSearchParams({ event_id: eventId })
-            }).then(response => response.json()) 
-            .then(data => console.log("Success:", data))  
-            .then(data => {
-                location.reload();
-            })
-            .catch(error => console.error("Error:", error));
-        }
-
+        //gets all the tasks for an event
         function getEventTask(eventId) {
             return fetch(`/ecolution/events/gettasks/${eventId}/`)
                 .then(response => response.json())  
