dark text events

--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -133,7 +133,7 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <p class="text_light">There are no current events ongoing</p>
+                    <p class="text_dark">There are no current events ongoing</p>
                 {% endif %}
             </div>
         </div>
@@ -158,7 +158,7 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <p class="text_light">You have already joined all ongoing events</p>
+                    <p class="text_dark">You have already joined all ongoing events</p>
                 {% endif %}
             </div>
         </div>
