--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -568,3 +568,13 @@ img.profile_pic {
     padding: 0.4rem;
     box-sizing: border-box;
 }
+
+.sold-out-banner, .insufficient-banner {
+    background-color: rgba(255, 0, 0, 0.8);
+    color: white;
+    padding: 5px;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-bottom: 8px;
+}
