--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -351,6 +351,12 @@ section.pet h3 {
     font-weight: normal;
 }
 
+.pet_info_bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
 /* Section: Status Bar */
 section.status_bar .xp_bar {
     background-color: var(--color_light);
