--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -22,10 +22,10 @@
     <section class="spacer_large"></section>
     <section class="status_bar flex_h flex_center text_light">
         <div class="pet_status flex_v margin_sml flex_v_fill">
-            <div class="pet_info_bar flex_h" style="justify-content: space-between;">
+            <div class="pet_info_bar flex_h" style="justify-content: space-between;"> <!-- this displays the pets name and level -->
                 <p>Pet Name: {{ pet_name }}</p>
                 <p>Level: {{ level }}</p>
-            </div> <!-- this displays the pets name and level -->
+            </div>
             <div class="xp_bar box_shadow">
                 <div class="xp_bar_progress" style="width: {{ pet_exp }}%;"></div> <!-- this is a bar with the amount of xp that the pet has -->
             </div>
