--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -44,6 +44,7 @@
                             <a href="{% url 'events' %}">Events</a> <!-- this is to go to the events page where you can join events -->
                             <a href="{% url 'shop' %}">Shop</a> <!-- this is to go to the shop page where you can buy items -->
                             <a href="{% url 'settings' %}">Settings</a> <!-- this is to go to the settings page to edit or view settings -->
+                            <a href="{% url 'leaderboard' %}">Leaderboard</a> <!-- this is to go to the settings page to edit or view settings -->
                         </section> 
                     </section>
                     <section class="currency_indicator">
