--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -11,6 +11,9 @@
             <div class="image_wrapper">
                 {% if pet %}
                     <img src="{{ pet.computed_image_url }}" alt="{{ pet.pet_type }} pet">
+                    {% if hat %}
+                        <img src="{% static hat.image_path %}" class="hat {{ pet.pet_type }}" alt="Hat">
+                    {% endif %}
                 {% else %}
                     <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Default Pet">
                 {% endif %}
