--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -12,7 +12,7 @@
                 {% if pet %}
                     <img src="{{ pet.computed_image_url }}" alt="{{ pet.pet_type }} pet">
                     {% if hat %}
-                        <img src="{% static hat.image_path %}" class="hat {{ pet.pet_type }}" alt="Hat">
+                        <img src="{% static hat.image_path %}" class="hat {{ pet.pet_type }} {{ pet.size }}" alt="Hat">
                     {% endif %}
                 {% else %}
                     <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Default Pet">
