--- a/ECM2434/Ecolution/templates/qr_scanner.html
+++ b/ECM2434/Ecolution/templates/qr_scanner.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block main %}
-  <div class="qr-scanner-container">
+  <section class="qr-scanner-container">
     <h2>Scan QR Code</h2>
-    <div id="reader" style="width:600px;"></div>
-  </div>
+    <div id="reader"></div>
+  </section>
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <script>
     function onScanSuccess(decodedText, decodedResult) {
