--- a/ECM2434/Ecolution/templates/tasks.html
+++ b/ECM2434/Ecolution/templates/tasks.html
@@ -64,6 +64,8 @@
             border-radius: 10px;
             width: 300px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            max-height: 80vh;
+            overflow-y: auto;
         }
 
         .popup button {
